# anki_deckgen

./: .gitignore  pyproject.toml  raw_response.txt
anki_deckgen/: app.py
anki_deckgen/adapters/: anki_adapter.py  cli_adapter.py  openai_adapter.py  telegram_adapter.py
anki_deckgen/core/: flashcard_logic.py  models.py  service.py
anki_scraper/: anki_connect.py  anki_flashcards.py  cli.py  deck_generation.py  fileio.py  models.py  openai_client.py  retrieval.py  telegram_bot.py
prompts/: decision_prompt.txt  flashcard_prompt.txt  prompt.txt  telegram_prompt.txt
tests/unit/: test_CLI.py  test_IO.py  test_anki_flashcards.py  test_deck_creation.py
