[tool.poetry]
name = "anki-deckgen"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.scripts]
anki-deckgen = "anki_deckgen.cli:app"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]

[tool.anki-deckgen]
output_dir = "./generated_decks"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"